fix overlapping contents

--- a/src/main/webapp/css/sidebar.css
+++ b/src/main/webapp/css/sidebar.css
@@ -5,12 +5,7 @@
     background-color: #f8f9fa;
     border-right: 1px solid black;
     padding: 0.5rem;
-    width: 20rem;
-    height: 100%;
-    top: 0;
-    left: 0;
-    position: fixed;
-    overflow: hidden;
+    min-height: 100vh;
 }
 
 .logo-container {
@@ -122,12 +117,6 @@
 
 /* Media query for screens smaller than 768px */
 @media screen and (max-width: 767.98px) {
-    #sidebar {
-        width: 100%;
-        height: auto;
-        border-right: none;
-        border-bottom: 1px solid black;
-    }
 
     .logo-container,
     .profile-container,
@@ -157,12 +146,6 @@
 
 /* Media query for screens larger than 768px */
 @media screen and (min-width: 768px) {
-    #sidebar {
-        width: 20rem;
-        height: 100%;
-        border-right: 1px solid black;
-        border-bottom: none;
-    }
 
     .logo-container img {
         height: 40px;
